# TopoPrompt

./: .gitignore  README.md  program.md  pyproject.toml  topoprompt_implementation_blueprint.md
configs/: topoprompt_v1.yaml
scripts/: run_more_experiments.sh  run_next_experiments.sh  solution.py  update_score_chart.py
tests/: conftest.py  test_analysis_guidance.py  test_analyzer.py  test_backends.py  test_benchmark_dspy.py  test_benchmark_family.py  test_benchmark_smoke.py  test_compare.py  test_datasets.py  test_dspy_baselines.py  test_edits.py  test_ir.py  test_metrics_extra.py  test_router.py  test_runtime.py  test_search.py  test_selector.py  test_validator.py
tests/fixtures/smoke/: bbh_examples.jsonl  bbh_task.md  gsm8k_examples.jsonl  gsm8k_task.md  ifeval_examples.jsonl  ifeval_task.md  mmlu_examples.jsonl  mmlu_task.md
topoprompt/: __init__.py  artifacts.py  cli.py  config.py  ir.py  progress.py  schemas.py
topoprompt/backends/: __init__.py  dspy_backend.py  llm_client.py  openai_backend.py
topoprompt/compiler/: __init__.py  analyzer.py  edits.py  objective.py  search.py  seeds.py  selector.py  task_priors.py  templates.py  validator.py
topoprompt/eval/: __init__.py  benchmark_runner.py  budget.py  compare.py  datasets.py  dspy_baselines.py  metrics.py  significance.py
topoprompt/runtime/: __init__.py  cache.py  executor.py  parser.py  renderer.py  router.py  trace.py
topoprompt/transfer/: __init__.py  acquisition.py  features.py  posterior.py  store.py
